--- a/index.html
+++ b/index.html
@@ -13,39 +13,60 @@
 </head>
 <body class="bg-gray-100 text-gray-800">
 
+  <!-- MODAL TAMBAH PRODUK -->
+  <div id="modalProduk" class="fixed inset-0 bg-black/50 hidden items-center justify-center z-50">
+    <div class="bg-white p-6 rounded shadow w-10/12 max-w-sm">
+      <h2 class="text-lg font-bold mb-3 text-red-500">➕ Tambah Produk</h2>
+      <input type="text" id="produkBaruNama" placeholder="Nama Produk" class="w-full border p-2 mb-2 rounded" />
+      <input type="number" id="produkBaruHarga" placeholder="Harga (contoh: 8000)" class="w-full border p-2 mb-2 rounded" />
+      <div class="flex justify-end gap-2 mt-3">
+        <button onclick="tutupModal()" class="px-4 py-2 border rounded">Batal</button>
+        <button onclick="tambahProduk()" class="px-4 py-2 bg-red-600 text-white rounded">Tambah</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- MODAL HAPUS PRODUK -->
+  <div id="modalHapus" class="fixed inset-0 bg-black/50 hidden items-center justify-center z-50">
+    <div class="bg-white p-6 rounded shadow w-11/12 max-w-md">
+      <h2 class="text-lg font-bold mb-3 text-red-500">🗑️ Hapus Produk</h2>
+      <form id="formHapusProduk" class="max-h-60 overflow-y-auto mb-4"></form>
+      <div class="flex justify-end gap-2">
+        <button onclick="tutupModalHapus()" class="px-4 py-2 border rounded">Batal</button>
+        <button onclick="hapusProdukDipilih()" class="px-4 py-2 bg-red-600 text-white rounded">Hapus</button>
+      </div>
+    </div>
+  </div>
+
   <!-- Navbar Bawah -->
-  <nav class="fixed bottom-0 left-0 right-0 bg-white border-t flex justify-around items-center py-2 shadow z-50 text-sm">
+  <nav class="fixed bottom-0 left-0 right-0 bg-white border-t flex justify-around items-center py-2 shadow z-40 text-sm">
     <button onclick="showTab('home')" id="tab-home" class="flex flex-col items-center active-tab">
       🏠<span>Home</span>
     </button>
     <button onclick="showTab('rekap')" id="tab-rekap" class="flex flex-col items-center">
       📊<span>Rekap</span>
     </button>
+    <button onclick="bukaModal()" class="flex flex-col items-center text-red-600">
+      ➕<span>Produk</span>
+    </button>
+    <button onclick="bukaModalHapus()" class="flex flex-col items-center text-gray-600">
+      🗑️<span>Hapus</span>
+    </button>
   </nav>
 
   <!-- HOME -->
   <section id="home-tab" class="p-4">
     <h1 class="text-2xl font-bold mb-4 text-red-600">Pilih Produk</h1>
-    <div class="grid grid-cols-2 gap-3 mb-4">
-      <div onclick="addToCart('Tahu Susu Coba Coba',8000)" class="bg-white p-3 rounded shadow hover:bg-red-100 cursor-pointer">Tahu Coba - 8K</div>
-      <div onclick="addToCart('Tahu Susu Pacaran',25000)" class="bg-white p-3 rounded shadow hover:bg-red-100 cursor-pointer">Tahu Pacaran - 25K</div>
-      <div onclick="addToCart('Tahu Susu Jumbo',35000)" class="bg-white p-3 rounded shadow hover:bg-red-100 cursor-pointer">Tahu Jumbo - 35K</div>
-      <div onclick="addToCart('Kentang Goreng',8000)" class="bg-white p-3 rounded shadow hover:bg-red-100 cursor-pointer">Kentang - 8K</div>
-      <div onclick="addToCart('Sosis Jumbo Ori',8000)" class="bg-white p-3 rounded shadow hover:bg-red-100 cursor-pointer">Sosis Ori - 8K</div>
-      <div onclick="addToCart('Sosis Jumbo Keju',10000)" class="bg-white p-3 rounded shadow hover:bg-red-100 cursor-pointer">Sosis Keju - 10K</div>
-    </div>
-
+    <div class="grid grid-cols-2 gap-3 mb-4" id="produkContainer"></div>
     <div class="bg-white rounded p-4 shadow">
       <h2 class="text-lg font-bold mb-2">🛒 Keranjang</h2>
       <div id="cartList" class="mb-2"></div>
       <div class="font-bold text-right">Total: Rp <span id="totalHarga">0</span></div>
-
       <div class="mt-4">
         <label class="block text-sm font-semibold mb-1">💸 Uang Pembeli</label>
         <input type="text" id="uangPembeli" class="w-full border rounded p-2 mb-2" placeholder="Masukkan uang">
         <div class="text-right text-green-600 font-semibold">Kembalian: Rp <span id="kembalian">0</span></div>
       </div>
-
       <button onclick="simpanTransaksi()" class="mt-3 w-full bg-green-600 text-white py-2 rounded">Simpan Transaksi</button>
     </div>
   </section>
@@ -59,6 +80,14 @@
 
   <script>
     let cart = {};
+    let produkList = JSON.parse(localStorage.getItem("produkList")) || [
+      { nama: "Tahu Susu Coba Coba", harga: 8000 },
+      { nama: "Tahu Susu Pacaran", harga: 25000 },
+      { nama: "Tahu Susu Jumbo", harga: 35000 },
+      { nama: "Kentang Goreng", harga: 8000 },
+      { nama: "Sosis Jumbo Ori", harga: 8000 },
+      { nama: "Sosis Jumbo Keju", harga: 10000 }
+    ];
 
     function formatRupiah(n) {
       return n.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ".");
@@ -73,6 +102,26 @@
       return `rekap-${t.getFullYear()}-${t.getMonth() + 1}-${t.getDate()}`;
     }
 
+    function renderProduk() {
+      const container = document.getElementById("produkContainer");
+      container.innerHTML = '';
+      produkList.forEach(p => {
+        container.innerHTML += `
+          <div onclick="addToCart('${p.nama}', ${p.harga})" class="bg-white p-3 rounded shadow hover:bg-red-100 cursor-pointer">${p.nama} - ${formatRupiah(p.harga)}</div>
+        `;
+      });
+    }
+
+    function renderFormHapus() {
+      const form = document.getElementById("formHapusProduk");
+      form.innerHTML = produkList.map((p, i) => `
+        <label class="flex items-center mb-2">
+          <input type="checkbox" value="${i}" class="mr-2" />
+          ${p.nama} - Rp ${formatRupiah(p.harga)}
+        </label>
+      `).join('');
+    }
+
     function addToCart(nama, harga) {
       if (!cart[nama]) cart[nama] = { qty: 1, harga };
       else cart[nama].qty += 1;
@@ -83,7 +132,6 @@
       const cartList = document.getElementById("cartList");
       cartList.innerHTML = "";
       let total = 0;
-
       for (let nama in cart) {
         const item = cart[nama];
         const subtotal = item.qty * item.harga;
@@ -97,7 +145,6 @@
             </div>
           </div>`;
       }
-
       document.getElementById("totalHarga").textContent = formatRupiah(total);
       const uang = unformatRupiah(document.getElementById("uangPembeli").value || "0");
       const kembalian = uang - total;
@@ -113,30 +160,20 @@
     function simpanTransaksi() {
       let total = 0, itemCount = 0;
       const produk = [];
-
       for (let nama in cart) {
         const item = cart[nama];
         total += item.qty * item.harga;
         itemCount += item.qty;
         produk.push(`${nama} x ${item.qty}`);
       }
-
       const now = new Date();
       const tanggal = now.toLocaleDateString("id-ID");
       const jam = now.toLocaleTimeString("id-ID", { hour: '2-digit', minute: '2-digit' });
-
-      const transaksi = {
-        waktu: `${tanggal} ${jam}`,
-        total,
-        item: itemCount,
-        produk
-      };
-
+      const transaksi = { waktu: `${tanggal} ${jam}`, total, item: itemCount, produk };
       const key = todayKey();
       const data = JSON.parse(localStorage.getItem(key)) || [];
       data.push(transaksi);
       localStorage.setItem(key, JSON.stringify(data));
-
       cart = {};
       document.getElementById("uangPembeli").value = '';
       document.getElementById("kembalian").textContent = '0';
@@ -178,12 +215,59 @@
       document.getElementById(`tab-${tab}`).classList.add('active-tab');
     }
 
+    function bukaModal() {
+      document.getElementById("modalProduk").classList.remove("hidden");
+    }
+
+    function tutupModal() {
+      document.getElementById("modalProduk").classList.add("hidden");
+    }
+
+    function bukaModalHapus() {
+      renderFormHapus();
+      document.getElementById("modalHapus").classList.remove("hidden");
+    }
+
+    function tutupModalHapus() {
+      document.getElementById("modalHapus").classList.add("hidden");
+    }
+
+    function tambahProduk() {
+      const nama = document.getElementById("produkBaruNama").value.trim();
+      const harga = parseInt(document.getElementById("produkBaruHarga").value);
+      if (!nama || isNaN(harga) || harga <= 0) {
+        alert("⚠️ Isi nama dan harga produk dengan benar.");
+        return;
+      }
+      produkList.push({ nama, harga });
+      localStorage.setItem("produkList", JSON.stringify(produkList));
+      document.getElementById("produkBaruNama").value = "";
+      document.getElementById("produkBaruHarga").value = "";
+      tutupModal();
+      renderProduk();
+    }
+
+    function hapusProdukDipilih() {
+      const checkboxes = document.querySelectorAll("#formHapusProduk input:checked");
+      const indices = Array.from(checkboxes).map(cb => parseInt(cb.value));
+      if (indices.length === 0) {
+        alert("Tidak ada produk yang dipilih.");
+        return;
+      }
+      if (!confirm("Yakin ingin menghapus produk yang dipilih?")) return;
+      produkList = produkList.filter((_, i) => !indices.includes(i));
+      localStorage.setItem("produkList", JSON.stringify(produkList));
+      tutupModalHapus();
+      renderProduk();
+    }
+
     document.getElementById("uangPembeli").addEventListener("input", function (e) {
       const val = e.target.value.replace(/\D/g, '');
       e.target.value = formatRupiah(val);
       renderCart();
     });
 
+    renderProduk();
     updateRekap();
   </script>
 </body>
