--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
   <section id="home-tab" class="p-4">
     <h1 class="text-2xl font-bold mb-4 text-red-600">Pilih Produk</h1>
     <!-- Tempel Pesan WA -->
-<textarea id="waInput" class="w-full border p-2 mb-2 rounded text-sm" rows="3" placeholder="Contoh: tahu susu pacaran 2&#10;sosis jumbo ori 1"></textarea>
-<button onclick="prosesPesanWA()" class="mb-4 w-full bg-blue-600 text-white py-2 rounded">📥 Tambahkan dari WA</button>
+<textarea id="waInput" class="w-full border p-2 mb-2 rounded text-sm" rows="3" placeholder="Contoh: 
+  tahu susu pacaran 2&#10;sosis jumbo ori 1"></textarea>
+<button onclick="prosesPesanWA()" class="mb-4 w-full bg-blue-600 text-white py-2 rounded">Hitung Total</button>
     <div class="grid grid-cols-2 gap-3 mb-4" id="produkContainer"></div>
     <div class="bg-white rounded p-4 shadow">
       <h2 class="text-lg font-bold mb-2">🛒 Keranjang</h2>
