--- a/index.html
+++ b/index.html
@@ -5,10 +5,33 @@
   <title>Kasir Assa Food</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <script src="https://cdn.tailwindcss.com"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <style>
     body { padding-bottom: 80px; }
     .active-tab { color: #dc2626; font-weight: bold; }
     .hidden-tab { display: none; }
+
+    .floating-icon {
+    position: fixed;
+    bottom: 24px;
+    right: 24px;
+    z-index: 9999;
+    background-color: #ffffff;
+    border: 2px solid #e2e8f0;
+    border-radius: 9999px;
+    width: 52px;
+    height: 52px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    transition: all 0.2s ease-in-out;
+  }
+  .floating-icon:hover {
+    transform: scale(1.08);
+  }
   </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
@@ -320,6 +343,21 @@ tahu susu pacaran 2&#10;sosis jumbo ori 1"></textarea>
     alert("⚠️ Tidak ada produk ditemukan dari pesan WA.");
   }
 }
+
+<!-- Tempat donasi akan dimuat -->
+<div id="tamianza-support-placeholder"></div>
+
+<!-- Fetch komponen support -->
+<script>
+  fetch("support.html")
+    .then(res => res.text())
+    .then(html => {
+      document.getElementById("tamianza-support-placeholder").innerHTML = html;
+      const script = document.createElement('script');
+      script.src = 'https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js';
+      document.body.appendChild(script);
+    });
+</script>
 
   </script>
 </body>
