--- a/support.html
+++ b/support.html
@@ -13,7 +13,7 @@
       </div>
       <div class="modal-body d-flex flex-column align-items-center justify-content-center">
         <p class="text-muted mb-3 text-center">Scan QRIS to support this project.</p>
-        <img src="qris.png" alt="QRIS" class="img-fluid rounded shadow-sm" style="max-width: 220px;">
+        <img src="IMG_20250614_144836.png" alt="QRIS" class="img-fluid rounded shadow-sm" style="max-width: 220px;">
         <p class="text-xs text-muted mt-2">© Tamianza.dev</p>
       </div>
     </div>
