--- a/support.html
+++ b/support.html
@@ -1,5 +1,5 @@
 <!-- support.html -->
-<div id="toggleButton" class="floating-icon" title="Support by Tamianza.dev" data-bs-toggle="modal" data-bs-target="#supportModal">
+<div id="toggleButton" class="floating-icon" style="top: 24px; right: 24px;" title="Support by Tamianza.dev" data-bs-toggle="modal" data-bs-target="#supportModal">
   <i id="iconSupport" class="bi bi-code-slash fs-5 text-dark"></i>
 </div>
 
